# mkl25z4-hal-examples

./: .gitignore  Cargo.toml  README.md  memory.x  openocd.cfg
.cargo/: config
